--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,37 @@
+defaults: &defaults
+  working_directory: ~/lookingatyou
+
 version: 2.1
 orbs:
   aws-s3: circleci/aws-s3@1.0.0
 jobs:
-  build:
+  test:
+    branches:
+      only:
+        - master
+    docker:
+      - -image: 'circleci/node:latest'
+    steps:
+      - checkout
+      - restore_cache:        
+        keys: 
+          - lookingatyou-{{ checksum "package-lock.json" }}
+          - lookingatyou-
+      - run:
+          name: install
+          command: npm install
+      - save_cache:
+          key:  lookingatyou-{{ checksum "package-lock.json" }}
+          paths:
+              - node_modules
+      - run:
+          name: test
+          command: npm run test
+      - store_test_results:
+          path: tests/test-output/
+      - store_artifacts:
+          path: tests/coverage   
+  deploy:
     branches:
       only:
         - master
@@ -12,13 +41,16 @@ jobs:
       - checkout
       - run: mkdir bucket && echo "lorum ipsum" > bucket/build_asset.txt
       - aws-s3/sync:
-          from: bucket
-          to: 's3://my-s3-bucket-name/prefix'
+          from: ./
+          to: 's3://looking-at-you/'
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
           overwrite: true
-      - aws-s3/copy:
-          from: bucket/build_asset.txt
-          to: 's3://my-s3-bucket-name'
-          arguments: '--dryrun'
+          aws-region: eu-west-2
+workflows:
+  version: 2.1
+  test-and-deploy:
+    jobs:
+      - test
+      - deploy
