--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,7 @@ version: 2.1
 orbs:
   aws-s3: circleci/aws-s3@1.0.0
 jobs:
-  test:
-    branches:
-      only:
-        - master  
+  test: 
     docker:
       - -image: 'circleci/node:latest'
     steps:
@@ -33,13 +30,11 @@ jobs:
         path: tests/coverage   
 
   deploy:
-    branches:
-      only:
-        - master
     docker:
       - image: 'circleci/python:2.7'
     steps:
       - checkout
+      - run: ls
       - aws-s3/sync:
         from: ./
         to: 's3://looking-at-you/'
