--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,14 @@ orbs:
   aws-s3: circleci/aws-s3@1.0.0
 jobs:
   test: 
+    <<: *defaults
     docker:
-      - -image: 'circleci/node:latest'
+      - image: 'circleci/node:latest'
     steps:
       - checkout
       - restore_cache:        
-        keys: 
+        key: 
           - lookingatyou-{{ checksum "package-lock.json" }}
-          - lookingatyou-
       - run:
         name: install
         command: npm install
@@ -21,20 +21,18 @@ jobs:
         key:  lookingatyou-{{ checksum "package-lock.json" }}
         paths:
           - node_modules
-      - run:
-        name: test
-        command: npm run test
+      - run: npm run test
       - store_test_results:
         path: tests/test-output/
       - store_artifacts:
         path: tests/coverage   
 
   deploy:
+    <<: *defaults
     docker:
       - image: 'circleci/python:2.7'
     steps:
       - checkout
-      - run: ls
       - aws-s3/sync:
         from: ./
         to: 's3://looking-at-you/'
