--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,41 @@
-defaults: &defaults
-  working_directory: ~/lookingatyou
-
-version: 2.1
-orbs:
-  aws-s3: circleci/aws-s3@1.0.0
+version: 2
 jobs:
   test: 
-    <<: *defaults
     docker:
       - image: 'circleci/node:latest'
     steps:
       - checkout
       - restore_cache:        
-        key: 
-          - lookingatyou-{{ checksum "package-lock.json" }}
+        key: lookingatyou-{{ checksum "package-lock.json" }}
       - run:
-        name: install
+        name: Install npm dependencies
         command: npm install
       - save_cache:
         key:  lookingatyou-{{ checksum "package-lock.json" }}
         paths:
           - node_modules
-      - run: npm run test
+      - run: 
+        name: Run tests
+        command: npm run test
       - store_test_results:
         path: tests/test-output/
       - store_artifacts:
         path: tests/coverage   
 
   deploy:
-    <<: *defaults
     docker:
-      - image: 'circleci/python:2.7'
+      - image: 'circleci/python:3.6.4'
     steps:
-      - checkout
-      - aws-s3/sync:
-        from: ./
-        to: 's3://looking-at-you/'
-        arguments: |
-          --acl public-read \
-          --cache-control "max-age=86400"
-        overwrite: true
-        aws-region: eu-west-2
+      - checkout      
+      - run: sudo pip install awscli --upgrade
+      - run: aws --version
+      - run: aws s3 ls
+      - run:
+        name: "Deploy to S3"
+        command: aws s3 sync ./ s3://looking-at-you/ --delete
 
 workflows:
-  version: 2.1
+  version: 2
   test-and-deploy:
     jobs:
       - test
