--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,22 @@ jobs:
       - image: 'circleci/node:latest'
     steps:
       - checkout
-      - restore_cache:        
-        key: lookingatyou-{{ checksum "package-lock.json" }}
+      - restore_cache: 
+          key: lookingatyou-{{ checksum "package-lock.json" }}
       - run:
-        name: Install npm dependencies
-        command: npm install
+          name: Install npm dependencies
+          command: npm install
       - save_cache:
-        key:  lookingatyou-{{ checksum "package-lock.json" }}
-        paths:
-          - node_modules
+          key: lookingatyou-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
       - run: 
-        name: Run tests
-        command: npm run test
+          name: Run tests
+          command: npm run test
       - store_test_results:
-        path: tests/test-output/
+          path: tests/test-output/
       - store_artifacts:
-        path: tests/coverage   
+          path: tests/coverage   
 
   deploy:
     docker:
@@ -31,12 +31,14 @@ jobs:
       - run: aws --version
       - run: aws s3 ls
       - run:
-        name: "Deploy to S3"
-        command: aws s3 sync ./ s3://looking-at-you/ --delete
+          name: "Deploy to S3"
+          command: aws s3 sync ./ s3://looking-at-you/ --delete
 
 workflows:
   version: 2
   test-and-deploy:
     jobs:
       - test
-      - deploy
+      - deploy:
+          requires:
+            - test
