--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ jobs:
             - node_modules
       - run: 
           name: Run tests
-          command: npm run test
+          command: jest --ci --runInBand --reporters=jest-junit
+          environment:
+            JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
 
   deploy:
     docker:
