--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             - node_modules
       - run: 
           name: Run tests
-          command: jest --ci --runInBand --reporters=jest-junit
+          command: npm run test
           environment:
             JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
 
