--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
 
   test: 
     docker:
-      - image: 'circleci/node:latest'
+      - image: 'circleci/node:10.16'
     steps:
       - checkout
       - restore_cache: 
