--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "scripts": {
     "test": "jest"
   },
+  "devDependencies": {
+    "jest": "^24.8.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ScottLogic/lookingatyou.git"
