--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "d3-selection": "^1.4.0",
+    "package.json": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
