--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@types/jest": "24.0.14",
-    "typescript": "3.5.1",
     "@types/d3-selection": "^1.4.1",
+    "@types/jest": "24.0.14",
+    "@types/jsdom": "^12.2.3",
     "@types/node": "12.0.8",
     "@types/react": "16.8.19",
-    "@types/react-dom": "16.8.4"
+    "@types/react-dom": "16.8.4",
+    "jsdom": "^15.1.1",
+    "typescript": "3.5.1"
   },
   "dependencies": {
     "d3-selection": "^1.4.0",
