--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,12 @@
 version: 2
 jobs:
 
-  test: 
+  test:
     docker:
       - image: 'circleci/node:10.16'
     steps:
       - checkout
-      - restore_cache: 
+      - restore_cache:
           key: lookingatyou-{{ checksum "package-lock.json" }}
       - run:
           name: Install npm dependencies
@@ -15,7 +15,7 @@ jobs:
           key: lookingatyou-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-      - run: 
+      - run:
           name: Run tests
           command: npm run test
 
@@ -23,18 +23,21 @@ jobs:
     docker:
       - image: 'circleci/python:3.6.4'
     steps:
-      - checkout      
+      - checkout
       - run: sudo pip install awscli --upgrade
       - run: aws --version
       - run:
+          name: Build project
+          command: npm run build
+      - run:
           name: "Deploy to S3"
-          command: aws s3 sync ./src/ s3://looking-at-you/ --delete
+          command: aws s3 sync ./build/ s3://looking-at-you/ --delete
 
 workflows:
   version: 2
   test-and-deploy:
     jobs:
-      - test:
-          filters:
-            branches:
-              only: master
+      - test
+      - deploy:
+          requires:
+            - test
