--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,11 +21,14 @@ jobs:
 
   deploy:
     docker:
-      - image: 'circleci/python:3.6.4'
+      - image: 'circleci/python:3.6.4-stretch'
     steps:
       - checkout
       - run: sudo pip install awscli --upgrade
       - run: aws --version
+      - run:
+          name: Install npm
+          command: sudo apt-get -y install npm
       - run:
           name: Build project
           command: npm run build
