updated the way nodejs/npm is installed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,11 @@ jobs:
       - checkout
       - run: sudo pip install awscli --upgrade
       - run: aws --version
+      - run: sudo apt-get -y install curl
+      - run: curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
       - run:
           name: Install Node.js and npm
-          command: sudo apt-get -y install nodejs npm
+          command: sudo apt-get -y install nodejs
       - run: npm --version
       - run:
           name: Build project
