--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,10 @@ workflows:
   version: 2
   test-and-deploy:
     jobs:
-      - test
+      - test:
+          filters:
+            branches:
+              only: master
       - deploy:
           requires:
             - test
