removed trailing colon from the workflow step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ workflows:
   version: 2
   test-and-deploy:
     jobs:
-      - test:
+      - test
       - deploy:
           filters:
             branches:
