--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "devDependencies": {
     "@types/d3-selection": "^1.4.1",
+    "@types/enzyme": "^3.9.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "24.0.14",
     "@types/jsdom": "^12.2.3",
     "@types/node": "12.0.8",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
     "jsdom": "^15.1.1",
     "typescript": "3.5.1"
   },
@@ -38,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/src/setupEnzyme.js"
   }
 }
