--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npm --version
       - run:
           name: Install dependencies
-          command: npm install
+          command: npm ci
       - run:
           name: Build project
           command: npm run build
