--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,5 +46,8 @@ workflows:
     jobs:
       - test
       - deploy:
+          filters:
+            branches:
+              only: master
           requires:
             - test
