--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/d3-selection": "^1.4.1",
     "@types/enzyme": "^3.9.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/enzyme-to-json": "^1.5.3",
     "@types/jest": "24.0.14",
     "@types/jsdom": "^12.2.3",
     "@types/node": "12.0.8",
@@ -27,6 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
