--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           key: lookingatyou-{{ checksum "package-lock.json" }}
       - run:
           name: Install npm dependencies
-          command: npm install
+          command: npm ci
       - save_cache:
           key: lookingatyou-{{ checksum "package-lock.json" }}
           paths:
