--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           key: lookingatyou-{{ checksum "package-lock.json" }}
       - run:
           name: Install npm dependencies
-          command: npm install
+          command: npm ci
       - save_cache:
           key: lookingatyou-{{ checksum "package-lock.json" }}
           paths:
@@ -26,6 +26,9 @@ jobs:
       - checkout
       - run: sudo pip install awscli --upgrade
       - run: aws --version
+      - run:
+          name: Update npm to use ci command
+          command: sudo npm i -g npm@6.9.0
       - run: npm --version
       - run:
           name: Install dependencies
