--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "3.5.1"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^1.0.2",
+    "@tensorflow/tfjs": "^1.2.1",
     "d3-selection": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
