--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@types/node": "12.0.8",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.0",
     "jsdom": "^15.1.1",
+    "redux-devtools": "^3.5.0",
     "typescript": "3.5.1"
   },
   "dependencies": {
@@ -18,7 +20,9 @@
     "d3-selection": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
