--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "jsdom": "^15.1.1",
+    "tslint": "^5.18.0",
+    "tslint-react": "^4.0.0",
     "typescript": "3.5.1"
   },
   "dependencies": {
