--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "jsdom": "^15.1.1",
+    "prettier": "^1.18.2",
     "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "3.5.1"
   },
