--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,20 @@
 version: 2
 jobs:
+  lint:
+    docket:
+      - image: 'circleci/node:10.16'
+    steps:
+      -checkout
+      -restore_cache:
+          key: lookingatyou-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install npm dependencies
+          command: npm ci
+      -save_cache:
+          key: lookingatyou-{{ checksum "package-lock.json" }}
+      - run:
+        name: Check Linting
+        command: npm run lint
 
   test:
     docker:
@@ -37,14 +52,16 @@ jobs:
           name: Build project
           command: npm run build
       - run:
-          name: "Deploy to S3"
+          name: 'Deploy to S3'
           command: aws s3 sync ./build/ s3://looking-at-you/ --delete
 
 workflows:
   version: 2
   test-and-deploy:
     jobs:
-      - test
+      - lint
+      - test:
+        requires: lint
       - deploy:
           filters:
             branches:
