--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,12 @@
 version: 2
 jobs:
-
   lint:
     docker:
       - image: 'circleci/node:10.16'
     steps:
-      -checkout
+      - checkout
       - restore_cache:
-          key: lookingatyou-{{ checksum "package-lock.json" }}
+        key: lookingatyou-{{ checksum "package-lock.json" }}
       - run:
           name: Install npm dependencies
           command: npm ci
@@ -62,7 +61,8 @@ workflows:
     jobs:
       - lint
       - test:
-        requires: lint
+          requires:
+            - lint
       - deploy:
           filters:
             branches:
