now deploys feature branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,11 @@ jobs:
           command: npm run build
       - run:
           name: "Deploy to S3"
-          command: aws s3 sync ./build/ s3://looking-at-you/ --delete
+          command: |
+            if ["${CIRCLE_BRANCH}" == "master" ]; then
+              aws s3 sync ./build/ s3://looking-at-you/ --delete
+            else
+              aws s3 sync ./build/ s3://looking-at-you/$CIRCLE_BRANCH --delete
 
 workflows:
   version: 2
@@ -48,6 +52,8 @@ workflows:
       - deploy:
           filters:
             branches:
-              only: master
+              only:
+                - master
+                - /feature.*/
           requires:
             - test
