--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "private": true,
   "devDependencies": {
     "@types/d3-selection": "^1.4.1",
+    "@types/enzyme": "^3.9.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/enzyme-to-json": "^1.5.3",
     "@types/jest": "24.0.14",
     "@types/jsdom": "^12.2.3",
     "@types/node": "12.0.8",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.1.0",
+    "@types/redux-mock-store": "^1.0.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
     "jsdom": "^15.1.1",
     "redux-devtools": "^3.5.0",
+    "redux-mock-store": "^1.5.3",
     "typescript": "3.5.1"
   },
   "dependencies": {
