Tech task/46 add linting (#81)
* Added tslint to project

* Modified WebcamFeed.tsx to be tslint compliant

* Added prettier config for autoformatting

* Updated file formatting, and fixed easy linting errors

* Added rule exclusions for lambda functions in affected files

* Added linting to CI

* fixed config.yml

* fixed config.yml

* Fixed config.yml

* fixed indenting linting check in config.yml

* Fixed indenting on cache restore config.yml

* added paths for save_cache

* Changed linter to disallow public acess modifier

* rebased and fixed fudged merge

* fixed linting errors introduced by rebase

* fixed file casing error

* fixed casing of configMenu folder

* Attempted fix for configMenu folder #5621

* TechTask/46-add-linting (#81)

Added linting

* merged changes from master and updated formatting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,22 @@
 version: 2
 jobs:
+  lint:
+    docker:
+      - image: 'circleci/node:10.16'
+    steps:
+      - checkout
+      - restore_cache:
+          key: lookingatyou-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install npm dependencies
+          command: npm ci
+      - save_cache:
+          key: lookingatyou-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+      - run:
+          name: Check Linting
+          command: npm run lint
 
   test:
     docker:
@@ -37,14 +54,17 @@ jobs:
           name: Build project
           command: npm run build
       - run:
-          name: "Deploy to S3"
+          name: 'Deploy to S3'
           command: aws s3 sync ./build/ s3://looking-at-you/ --delete
 
 workflows:
   version: 2
   test-and-deploy:
     jobs:
-      - test
+      - lint
+      - test:
+          requires:
+            - lint
       - deploy:
           filters:
             branches:
