--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
     "jsdom": "^15.1.1",
+    "prettier": "^1.18.2",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.0.0",
     "redux-devtools": "^3.5.0",
     "redux-mock-store": "^1.5.3",
     "typescript": "3.5.1"
@@ -36,7 +40,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/tslint -p ."
   },
   "eslintConfig": {
     "extends": "react-app"
