--- a/package.json
+++ b/package.json
@@ -28,8 +28,27 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "coverage": "react-scripts test --coverage --watchAll=false",
         "eject": "react-scripts eject",
         "lint": "./node_modules/.bin/tslint -p ."
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "src/**/*.tsx",
+            "!<rootDir>/node_modules/"
+        ],
+        "coverageThreshold": {
+            "global": {
+                "branches": 80,
+                "functions": 80,
+                "lines": 80,
+                "statements": 80
+            }
+        },
+        "coverageReporters": [
+            "text",
+            "html"
+        ]
     },
     "eslintConfig": {
         "extends": "react-app"
