set the homepage value in package.json and updated the aws s3 sync to set public-read

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "lookingatyou",
     "version": "0.1.0",
     "private": true,
+    "homepage": ".",
     "devDependencies": {
         "@types/enzyme": "^3.9.4",
         "@types/enzyme-adapter-react-16": "^1.0.5",
