testing deployment stage on bug branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ workflows:
                       branches:
                           only:
                               - master
+                              - /bug.*/
                               - /feature.*/
                   requires:
                       - test
