--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,9 +57,9 @@ jobs:
                   name: 'Deploy to S3'
                   command: |
                       if ["${CIRCLE_BRANCH}" == "master" ]; then
-                        aws s3 sync ./build/ s3://looking-at-you/ --delete --acl public-read
+                        aws s3 sync ./build/ s3://looking-at-you/ --delete
                       else
-                        aws s3 sync ./build/ s3://looking-at-you/$CIRCLE_BRANCH --delete --acl public-read
+                        aws s3 sync ./build/ s3://looking-at-you/$CIRCLE_BRANCH --delete
                       fi
 
 workflows:
