--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "test": "react-scripts test",
         "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
         "eject": "react-scripts eject",
-        "lint": "./node_modules/.bin/tslint -p ."
+        "lint": "./node_modules/.bin/tslint -p .",
+        "coverage": "react-scripts test --coverage --watchAll=false"
     },
     "eslintConfig": {
         "extends": "react-app"
