Fixing incorrect equality check in yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
             - run:
                   name: 'Deploy to S3'
                   command: |
-                      if [ $CIRCLE_BRANCH = 'master' ]; then
+                      if [ $CIRCLE_BRANCH == 'master' ]; then
                         aws s3 sync ./build/ s3://looking-at-you/ --delete
                       else
                         aws s3 sync ./build/ s3://looking-at-you/$CIRCLE_BRANCH --delete
