changed detectIndentation to false in vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "prettier.tslintIntegration": true,
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
-    "editor.tabSize": 4
+    "editor.tabSize": 4,
+    "editor.detectIndentation": false
 }
