Feature/93 add gradient to eyes (#127)
* started adding gradients to eyes

* added tinyColor to brighten and darken the iris colours

* added gradients to the iris, inner lines and reflections

* changed the inner lines to relative lines

* fixed the scaling issue with iris paths

* cleanup of Eye component

* added fill to rendering circle

* cleanup and added snapshot tests for EyeController, Eye and Gradients components

* updated description of tests for Eye, EyeController and Gradients, removed unnecessary <svg/> from Eye and renamed innerPath from tsx to ts

* rebased master and updated the EyeController to use target prop

* added missing dependency

* changed package.json to 4 spaces indentation

* added export to EyeController

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@tensorflow-models/coco-ssd": "^1.0.2",
         "@tensorflow/tfjs": "^1.2.1",
+        "@types/tinycolor2": "^1.4.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.1.0",
@@ -35,7 +36,8 @@
         "redux": "^4.0.1",
         "redux-localstorage-simple": "^2.1.6",
         "redux-mock-store": "^1.5.3",
-        "reselect": "^4.0.0"
+        "reselect": "^4.0.0",
+        "tinycolor2": "^1.4.1"
     },
     "scripts": {
         "start": "react-scripts start",
