--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "preserve",
-        "plugins": [{ "name": "typescript-tslint-plugin" }]
+        "plugins": [{ "name": "typescript-tslint-plugin" }],
+        "strictNullChecks": true
     },
     "include": ["src"]
 }
