--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "dependencies": {
         "@tensorflow-models/coco-ssd": "^1.1.0",
         "@tensorflow/tfjs": "^1.2.1",
+        "@types/react-tooltip": "^3.9.3",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.1.0",
         "react-scripts": "3.0.1",
+        "react-tooltip": "^3.10.0",
         "redux": "^4.0.1",
         "redux-localstorage-simple": "^2.1.6",
         "redux-mock-store": "^1.5.3",
