--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
                   paths:
                       - node_modules
             - run:
+                  name: Build project
+                  command: npm run build
+            - run:
                   name: Check Linting
                   command: npm run lint
 
@@ -54,12 +57,16 @@ jobs:
                   name: Build project
                   command: npm run build
             - run:
+                  name: Clean up the feature branches on AWS
+                  command: ./cleanup.sh
+            - run:
                   name: 'Deploy to S3'
                   command: |
                       if [ $CIRCLE_BRANCH = 'master' ]; then
-                        aws s3 sync ./build/ s3://looking-at-you/ --delete
+                      aws s3 rm s3://looking-at-you/ --recursive --exclude "feature/"
+                      aws s3 cp ./build/ s3://looking-at-you/ --recursive
                       else
-                        aws s3 sync ./build/ s3://looking-at-you/$CIRCLE_BRANCH --delete
+                      aws s3 sync ./build/ s3://looking-at-you/$CIRCLE_BRANCH --delete
                       fi
 
 workflows:
