--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
         "eject": "react-scripts eject",
         "lint": "./node_modules/.bin/tslint -p .",
-        "coverage": "react-scripts test --coverage --watchAll=false"
+        "coverage": "rm -r coverage && react-scripts test --coverage --watchAll=false"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -64,6 +64,30 @@
             "last 1 chrome version",
             "last 1 firefox version",
             "last 1 safari version"
+        ]
+    },
+    "jest": {
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ],
+        "collectCoverageFrom": [
+            "src/**/*.tsx",
+            "src/**/*.ts",
+            "!<rootDir>/src/index.tsx",
+            "!<rootDir>/src/serviceWorker.ts",
+            "!<rootDir>/src/store/store.ts",
+            "!<rootDir>/node_modules/"
+        ],
+        "coverageThreshold": {
+            "global": {
+                "branches": 80,
+                "functions": 80,
+                "lines": 80,
+                "statements": 80
+            }
+        },
+        "coverageReporters": [
+            "html"
         ]
     }
 }
