--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@tensorflow-models/coco-ssd": "^1.1.0",
+        "@tensorflow-models/posenet": "2.1.0",
         "@tensorflow/tfjs": "^1.2.1",
         "@types/react-tooltip": "^3.9.3",
         "react": "^16.8.6",
