--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@tensorflow-models/posenet": "2.1.0",
         "@tensorflow/tfjs": "^1.2.1",
         "@types/react-tooltip": "^3.9.3",
+        "lodash": "^4.17.14",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.1.0",
