--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "enzyme-to-json": "^3.3.5",
         "jsdom": "^15.1.1",
         "prettier": "^1.18.2",
+        "react-fast-compare": "^2.0.4",
         "redux-devtools": "^3.5.0",
         "tslint": "^5.18.0",
         "tslint-config-prettier": "^1.18.0",
