--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "@tensorflow-models/coco-ssd": "^1.1.0",
         "@tensorflow-models/posenet": "2.1.0",
         "@tensorflow/tfjs": "^1.2.1",
+        "@types/lodash": "^4.14.136",
         "@types/react-tooltip": "^3.9.3",
         "lodash": "^4.17.14",
+        "lolex": "^4.1.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.1.0",
