--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dependencies": {
         "@tensorflow-models/posenet": "2.1.0",
         "@tensorflow/tfjs": "^1.2.1",
+        "@types/color-convert": "^1.9.0",
         "@types/react-tooltip": "^3.9.3",
+        "color-convert": "^2.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.1.0",
