--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-redux": "^7.1.0",
         "react-scripts": "3.0.1",
         "react-tooltip": "^3.10.0",
+        "reactjs-popup": "^1.4.2",
         "redux": "^4.0.1",
         "redux-localstorage-simple": "^2.1.6",
         "redux-mock-store": "^1.5.3",
