--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "typescript": "3.5.1"
     },
     "dependencies": {
+        "@material-ui/core": "^4.3.1",
         "@tensorflow-models/posenet": "2.1.0",
         "@tensorflow/tfjs": "^1.2.1",
         "@types/color-convert": "^1.9.0",
