--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "typescript": "3.5.1"
     },
     "dependencies": {
+        "@material-ui/core": "^4.3.1",
         "@tensorflow-models/posenet": "2.1.0",
         "@tensorflow/tfjs": "^1.2.1",
         "@types/color-convert": "^1.9.0",
@@ -38,6 +39,7 @@
         "react-redux": "^7.1.0",
         "react-scripts": "3.0.1",
         "react-tooltip": "^3.10.0",
+        "reactjs-popup": "^1.4.2",
         "redux": "^4.0.1",
         "redux-localstorage-simple": "^2.1.6",
         "redux-mock-store": "^1.5.3",
