--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
         "@tensorflow-models/posenet": "2.1.0",
         "@tensorflow/tfjs": "^1.2.1",
         "@types/color-convert": "^1.9.0",
+        "@types/lodash": "^4.14.137",
         "@types/react-color": "^3.0.1",
         "@types/react-tooltip": "^3.9.3",
         "color-convert": "^2.0.0",
+        "lodash": "^4.17.15",
         "react": "^16.8.6",
         "react-color": "^2.17.3",
         "react-dom": "^16.8.6",
